...
            alignSelf: 'center',
            paddingHorizontal: navHeaderBarStyle.paddingHorizontal,
          },
          arrivalStyle,
        ]}>
        <NavHeaderBackButton
          accessibilityLabel={t`Go back`}
          onPress={handleBack}
          testID={backTestID}
        />

        {titlePill ? titlePill : <NavHeaderTitlePill title={title ?? ''} />}

...
